--- a/public/login.html
+++ b/public/login.html
@@ -30,7 +30,8 @@ es (67 sloc)  2.34 KB
   <p>You Gotta Love <a href="http://www.polymer-project.org/" target="_blank">Google</a></p>
 </footer>  
   
-
+<script src="jquery-3.1.1.min.js"></script>
+<script src="http://cdn.wedeploy.com/api/latest/wedeploy.js"></script>
 	<script>
 
 	function facbeook(){
