logged in and form

--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -29,7 +29,10 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <div class="material-icons mdl-badge mdl-badge--overlap" id="userName" data-badge="Valter Caldeira">account_box</div>
+  	<span class="mdl-layout-title">MusicV</span> 
+  	<span class="mdl-chip">
+    	<span id="userName" class="mdl-chip__text">Basic Chip</span>
+	</span>
   </div>
   <main class="mdl-layout__content">
 
@@ -40,7 +43,7 @@
       	<div class="mdl-grid">
 		    <div class="mdl-layout-spacer"></div>
 		    <div class="mdl-cell mdl-cell--4-col">
-		    	<form action="#">
+		    	<form id="form">
 				  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
 				    <input id="url" class="mdl-textfield__input" type="text" id="sample3">
 				    <label class="mdl-textfield__label" for="sample3">Video Title...</label>
