--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -30,6 +30,10 @@
   </header>
   <div class="mdl-layout__drawer">
   	<span class="mdl-layout-title">MusicV</span> 
+  	<span class="mdl-chip mdl-chip--contact">
+	    <span id="userNameAbrev" class="mdl-chip__contact mdl-color--teal mdl-color-text--white">A</span>
+	    <span id="userName" class="mdl-chip__text">Contact Chip</span>
+	</span>
   	<span class="mdl-chip">
     	<span id="userName" class="mdl-chip__text">Basic Chip</span>
 	</span>
