--- a/webapp/public/login.html
+++ b/webapp/public/login.html
@@ -22,6 +22,7 @@
           <button onclick="google();" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
             Google Login
           </button>
+          <a href="/auth/facebook" class="btn btn-primary"><span class="fa fa-facebook"></span> Facebook</a>
 
 
         </div>
