--- a/webapp/public/login.html
+++ b/webapp/public/login.html
@@ -50,7 +50,7 @@
     }
     
     auth.onSignIn(function(user) {
-			alert('Signed-in ' + user.email);
+			window.location = "http://musicv.wedeploy.io";
 		});
 
   </script>
