--- a/webapp/public/_error/404.html
+++ b/webapp/public/_error/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>404 / Not Found</title>
+	<title>Está tudo F*****!!</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,700">
 	<style>
 	body {
