--- a/webapp/public/_error/404.html
+++ b/webapp/public/_error/404.html
@@ -42,7 +42,7 @@
 <body>
 	<div class="container">
 		<h1>404</h1>
-		<h2>Not Found</h2>
+		<h2>Está Tudo F*****</h2>
 	</div>
 
 	<img class="logo" src="https://cloud.githubusercontent.com/assets/398893/16279177/af9b3622-386e-11e6-920e-3a3f33169831.png" width="150" alt="WeDeploy">
