--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-green.min.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-	<link rel="stylesheet" src="chatbot.css" />
+	<link rel="stylesheet" src="styles.css" />
 </head>
 <body>
 
