--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -179,5 +179,7 @@
 	<script src="history.js"></script>
 	<script src="chatbot.js"></script>
 	<script src="top.js"></script>	
+	<script src="libs.js"></script>	
+	<script src="plugins.js"></script>	
 </body>
 </html>
