--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -4,17 +4,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<title>MusicV</title>
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-green.min.css" />
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-green.min.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 	<link rel="stylesheet" href="styles.css" />
 	
+	
 </head>
 <body>
 	
-	<a href="#" class="chatbot-trigger chatClosed" id="chatbot-trigger">
+<a href="#" class="chatbot-trigger chatClosed" id="chatbot-trigger">
     <i class="fa chatIcon" aria-hidden="true"></i>
-    <p class="textChatBtn">AJUDA</p>
 </a>
 
 <div class="chatbot" id="chatbot" style="z-index: 99999">
@@ -178,6 +184,9 @@
 	<script src="chatbot.js"></script>
 	<script src="top.js"></script>	
 	<script src="libs.js"></script>	
-	<script src="plugins.js"></script>	
+	<script src="plugins.js"></script>
+	<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	
 	</body>
 </html>
