--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<title>MusicV</title>
 	<!-- Latest compiled and minified CSS -->
+	<link href="http://designers.hubspot.com/hs-fs/hub/327485/file-2054199286-css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
