--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -172,6 +172,11 @@
 
   </main>
 </div>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  var socket = io();
+</script>
 	
 	
 	<script src="jquery-3.1.1.min.js"></script>
