Auto stash before merge of "master" and "origin/master"

--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -82,16 +82,12 @@
       	<div class="mdl-grid">
 		    <div class="mdl-layout-spacer"></div>
 		    <div class="mdl-cell mdl-cell--4-col">
-		    	<form id="form">
-				  <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-				    <input id="url" class="mdl-textfield__input" type="text" id="sample3">
-				    <label class="mdl-textfield__label" for="sample3">Video Title...</label>
+			    <div class="box">
+				  <div class="container-1">
+				      <span class="icon"><i class="fa fa-search"></i></span>
+				      <input type="url" placeholder="Search..." />
 				  </div>
-				  <button type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
-			   		Submit
-				  </button>
-				</form>
-
+				</div>
 
 			<div id="spinner" class="mdl-spinner mdl-js-spinner" style="margin-left: 190px;width: 100px;height: 100px;margin-top: 55px;"></div>
 
