--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -17,7 +17,6 @@
 	<link rel="stylesheet" href="styles.css" />
 	
 	
-	
 </head>
 <body>
 	
@@ -86,7 +85,7 @@
 			    <div class="box">
 				  <div class="container-1">
 				      <span class="icon"><i class="fa fa-search"></i></span>
-				      <input type="url" placeholder="Search..." />
+				      <input id="search" type="search" placeholder="Search..." />
 				  </div>
 				</div>
 
