--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>MusicV</title>
 	<!-- Latest compiled and minified CSS -->
-	<link href="http://designers.hubspot.com/hs-fs/hub/327485/file-2054199286-css/font-awesome.css" rel="stylesheet">
+	<link href="https://designers.hubspot.com/hs-fs/hub/327485/file-2054199286-css/font-awesome.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
 <!-- Optional theme -->
@@ -13,7 +13,7 @@
 
 <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-green.min.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 	<link rel="stylesheet" href="styles.css" />
 	
 	
@@ -158,7 +158,7 @@
 
 <script src="/socket.io/socket.io.js"></script>
 	<script src="jquery-3.1.1.min.js"></script>
-	<script src="http://cdn.wedeploy.com/api/latest/wedeploy.js"></script>
+	<script src="https://cdn.wedeploy.com/api/2.3.1/wedeploy.js"></script>
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	<script src="http://www.youtube.com/player_api"></script>
 	<script src="index.js"></script>
