--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -132,7 +132,7 @@
 		  	<div class="mdl-badge mdl-badge--overlap" data-badge="0" style="width: 40px;margin-top: 18px;">
 				<img class="likeMusic" playedDate="" likes="" id="" value="" urlThumbnill="" title="" description="" 
 				onclick="addLike(this)" class="likeButton" style="width: 38px;cursor:pointer;" 
-				src="http://musicv.wedeploy.io/images/like.png" border="0" alt="">
+				src="http://nodejs-musicv.wedeploy.io/images/like.png" border="0" alt="">
 			</div>
 		  </div>
 		</div>
