--- a/webapp/private/index.html
+++ b/webapp/private/index.html
@@ -132,7 +132,7 @@
 		  	<div class="mdl-badge mdl-badge--overlap" data-badge="0" style="width: 40px;margin-top: 18px;">
 				<img class="likeMusic" playedDate="" likes="" id="" value="" urlThumbnill="" title="" description="" 
 				onclick="addLike(this)" class="likeButton" style="width: 38px;cursor:pointer;" 
-				src="http://nodejs-musicv.wedeploy.io/images/like.png" border="0" alt="">
+				src="https://nodejs-musicv.wedeploy.io/images/like.png" border="0" alt="">
 			</div>
 		  </div>
 		</div>
@@ -160,7 +160,7 @@
 	<script src="jquery-3.1.1.min.js"></script>
 	<script src="https://cdn.wedeploy.com/api/2.3.1/wedeploy.js"></script>
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-	<script src="http://www.youtube.com/player_api"></script>
+	<script src="https://www.youtube.com/player_api"></script>
 	<script src="index.js"></script>
 	<script src="list.js"></script>
 	<script src="music.js"></script>
