--- a/webapp/public/login.html
+++ b/webapp/public/login.html
@@ -47,7 +47,7 @@
     }
     
     auth.onSignIn(function(user) {
-			window.location = "http://nodejs-musicv.wedeploy.io";
+			window.location = "https://nodejs-musicv.wedeploy.io";
 		});
 
   </script>
